Updated Icons and fix context Overlapping

--- a/go-vigator/frontend/src/App.css
+++ b/go-vigator/frontend/src/App.css
@@ -229,6 +229,7 @@ a {
 }
 
 .contextmenu {
+  z-index: 2;
   position: absolute;
   width: 205px;
   display: flex;
